--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "alert-sound-notify": "0.0.8",
-    "node-notifier": "^9.0.1",
-    "supertest": "^6.1.3"
+    "axios": "^0.21.1",
+    "node-notifier": "^9.0.1"
   }
 }
