--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "CHECK_AFTER_HOW_MANY_SECONDS": 4,
+    "RE_CHECK_AFTER_SECONDS": 4,
     "PIN_CODE": 271801,
     "CHECK_FROM_THIS_AND_NEXT_SEVEN_DAYS": "06-05-2021",
     "NOTIFY_WHNE_AVAILABILITY_CAPACITY_IS_GREATER_THAN": 1
