--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "RE_CHECK_AFTER_SECONDS": 4,
     "PIN_CODE": 271801,
+    "MINIMUM_AGE_LIMIT": 45,
     "CHECK_FROM_THIS_AND_NEXT_SEVEN_DAYS": "06-05-2021",
     "NOTIFY_WHNE_AVAILABILITY_CAPACITY_IS_GREATER_THAN": 1
 }
