--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
     "RE_CHECK_AFTER_SECONDS": 4,
     "PIN_CODE": 271801,
+    "DISTRICT_ID": 670,
     "MINIMUM_AGE_LIMIT": 45,
-    "CHECK_FROM_THIS_AND_NEXT_SEVEN_DAYS": "06-05-2021",
-    "NOTIFY_WHNE_AVAILABILITY_CAPACITY_IS_GREATER_THAN": 1
+    "CHECK_FROM_THIS_AND_NEXT_SEVEN_DAYS": "09-05-2021",
+    "NOTIFY_WHNE_AVAILABILITY_CAPACITY_IS_GREATER_THAN": 0
 }
